# kuiperinfer-with-service

demos/yolo/: CMakeLists.txt  yolo_test.cpp
service/: CMakeLists.txt  handle.cpp  handle.h  main.cpp
service/json/: example.json
service/main/: handle.h
service/test/: client.py
